# ohjelmistotekniikka

./: .coveragerc  .pylintrc  README.md  pyproject.toml  school.db  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testidokumentti.md  tyoaikakirjanpito.txt  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
src/: database.py  database_reset.py  functions.py  gui.py  main.py  school.db
src/tests/: database_test.py  functions_test.py
viikko1/: README.md
