[tool.poetry]
name = "ohjelmistotekniikka"
version = "0.1.0"
description = ""
authors = ["Santeri Kuusela <santeri02.kuusela@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
werkzeug = "^2.2.3"
invoke = "^2.0.0"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
